Add composer json

--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,18 @@
   "homepage": "http://8il.ru",
   "type": "bitrix-component",
   "authors": [
-         {
-		  "name": "Stanislav Semenov",
-		  "email": "icjp2600@gmail.com",
-		  "homepage": "http://8il.ru",
-		  "role": "Developer"
-	  }
-	],
-	"support": {
-	  "email": "icjp2600@gmail.com",
-	  "docs": "https://github.com/cjp2600/bim-core",
-	  "source": "https://github.com/cjp2600/bim-core"
-	},
+    {
+      "name": "Stanislav Semenov",
+      "email": "icjp2600@gmail.com",
+      "homepage": "http://8il.ru",
+      "role": "Developer"
+    }
+  ],
+  "support": {
+    "email": "icjp2600@gmail.com",
+    "docs": "https://github.com/cjp2600/composite.shape",
+    "source": "https://github.com/cjp2600/composite.shape"
+  },
   "keywords": [
     "bitrix",
     "component",
